--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ checkpoints/
 
 analysis_output/
 synthetic_simulation_results/
-emergenics-phasetransitions/
+emergenics-dev/
 network-automaton/
 
 *.json
